Fix event images width on mobile, add form confirmation message

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2201,6 +2201,21 @@ textarea.input-field {
   margin-block-end: 5px;
 }
 
+.event-card .card-banner {
+  width: 100%;
+}
+
+.event-card .card-banner.img-holder {
+  width: 100%;
+}
+
+.event-card .card-banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
 .event-card .card-banner .img-cover {
   transition: var(--transition-2);
 }
